# SkillSage

./: .gitignore  README.md  WEBSITE_CONTENT.md  auth.html  career_goals.json  check_db.py  faqs_dataset.json  index.html  ingest_data.py  insert.py  learning_path.json  main.py  pyproject.toml  rag_pipeline.py  skills_list.json
skillsage_chroma_db/: chroma.sqlite3
temp datasets/: careers_dataset.json  roadmap.json  roadmap_dataset.json  seed_data.json  skills_dataset.json  skills_mapping.json
templates/: auth.html  dashboard.html  detailed-skill-analysis.html  home.html  index.html  profile.html  saved-chats.html  world-chat.html
test/: index.html  script.js  styles.css
